--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@
 body {
     font-family: sans-serif;
     text-transform: capitalize;
+    text-align: center;
 }
 #navegacion {
     width: 100dvw;
